SalesforcePrj/src/objects/Emp__c.object
<CustomObject>
    <description>employee obj for security model</description>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>YEAR( TODAY() ) - YEAR( Date_of_Birth__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Employee__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if employee is active</description>
        <label>Current Employee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <description>last name of emp</description>
        <label>Last Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_Technical_Skills__c</fullName>
        <label>Non_Technical Skills</label>
        <picklist>
            <picklistValues>
                <fullName>HR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Planning</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SSN__c</fullName>
        <label>SSN</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Technical_Skills__c</fullName>
        <label>Technical Skills</label>
        <picklist>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C++</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JAVA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DATABASE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASPX</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Technical__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Technical</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>chose_your_expert_skill_from_here__c</fullName>
        <label>chose your expert skill from here</label>
        <picklist>
            <controllingField>Technical__c</controllingField>
            <picklistValues>
                <fullName>c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>c++</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>java</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>operation control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>requirement gatherings</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Emp</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>current_employee</fullName>
        <columns>NAME</columns>
        <columns>City__c</columns>
        <columns>Current_Employee__c</columns>
        <columns>Last_Name__c</columns>
        <columns>SSN__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Current_Employee__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>current employee</label>
        <sharedTo>
            <group>Group1</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Emp Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Emp</pluralLabel>
    <recordTypes>
        <fullName>Non_Technical_Employee</fullName>
        <active>true</active>
        <label>Non Technical Employee</label>
    </recordTypes>
    <recordTypes>
        <fullName>Technical_Employee</fullName>
        <active>true</active>
        <label>Technical Employee</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Age_Validation_Rule</fullName>
        <active>true</active>
        <description>Age should be between 21 to 30</description>
        <errorConditionFormula>Age__c &lt;21 || Age__c &gt; 31</errorConditionFormula>
        <errorDisplayField>Date_of_Birth__c</errorDisplayField>
        <errorMessage>Age should be between 21 to 30</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SSN_rule</fullName>
        <active>true</active>
        <description>ssn should be less than 10</description>
        <errorConditionFormula>LEN( TEXT( SSN__c ))  &gt;=10</errorConditionFormula>
        <errorDisplayField>SSN__c</errorDisplayField>
        <errorMessage>SSN should be less than or equal to 10</errorMessage>
    </validationRules>
</CustomObject>